--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
+        "backpack/generators": "^1.1",
         "fzaninotto/faker": "~1.4",
+        "laracasts/generators": "dev-master as 1.1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
